[package]
name = "wd_passport"
version = "0.2.0"
edition = "2021"
authors = ["wangdong <1443965173@qq.com>"]
license = "MIT/Apache-2.0"
description = "Issue and verify vouchers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
base64 = "0.21.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
rand = "0.8.5"
rsa = {version = "0.8.1",features = ["default","sha2"] }
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"

[profile.test]
opt-level = 3

#[lib]
#name = "wd_passport"
#crate-type = ["staticlib", "cdylib"]
